refactor: JUnit 4 assertions to AssertJ for engine module & resolve Sonar findings (#521)
This is a large refactoring of the test code for the engine module that replaces JUnit 4 assertions by AssertJ. The refactorings have been done in a first step with Open Rewrite. The resulting ambiguities have been resolved manually.

All touched test classes have been cleaned up. Most Sonar findings have been fixed on these classes also.

Refactorings:

assertEquals -> assertThat(...).isEqualTo()
assertThat(...).isEqualTo(0) -> assertThat(...).isZero()
assertThat(...).isEqualTo(true) -> assertThat(...).isTrue()- assertTrue
assertThat(...).isEqualTo(false) -> assertThat(...).isFalse()
assertFalse
assertNull
assertNotNull
assertNotEquals
assertSame
fail
simplify AssertJ assertions
  - assertThat(XXX).isEqualTo(N) -> assertThat(XXX).hasSize(N);
  - chain consecutive assertions
Use 'L' as suffix for long literals instead of 'l'
Fix typos in comments, method names, classes, test resources
fill empty fail message with 'Exception expected'
fill empty catch blocks with expected comment
Join assertions to chains
Replace Arrays.asList() by List.of()
Fix typos
Add 'expected' comment to empty catch blocks
use dedicated assertion methods like isGreaterThan, isSameAs
Remove explicit type arguments when not needed
fix paragraphs in javadoc
Suppress warnings for call of deprecated API
replace assertThat(xxx instanceof YYY).isTrue() -> assertTht(xxx).isInstanceOf(YYY.class)