@@ -16,16 +16,15 @@
  */
 package org.operaton.bpm.engine.test.api.authorization;
 
+import org.operaton.bpm.engine.AuthorizationException;
+import org.operaton.bpm.engine.authorization.Authorization;
+import org.operaton.bpm.engine.impl.RuntimeServiceImpl;
+import org.operaton.bpm.engine.runtime.*;
+import org.operaton.bpm.engine.task.Task;
+import org.operaton.bpm.engine.variable.VariableMap;
+import org.operaton.bpm.engine.variable.value.TypedValue;
 import static org.operaton.bpm.engine.authorization.Authorization.ANY;
-import static org.operaton.bpm.engine.authorization.Permissions.ALL;
-import static org.operaton.bpm.engine.authorization.Permissions.CREATE;
-import static org.operaton.bpm.engine.authorization.Permissions.CREATE_INSTANCE;
-import static org.operaton.bpm.engine.authorization.Permissions.DELETE;
-import static org.operaton.bpm.engine.authorization.Permissions.DELETE_INSTANCE;
-import static org.operaton.bpm.engine.authorization.Permissions.READ;
-import static org.operaton.bpm.engine.authorization.Permissions.READ_INSTANCE;
-import static org.operaton.bpm.engine.authorization.Permissions.UPDATE;
-import static org.operaton.bpm.engine.authorization.Permissions.UPDATE_INSTANCE;
+import static org.operaton.bpm.engine.authorization.Permissions.*;
 import static org.operaton.bpm.engine.authorization.ProcessDefinitionPermissions.READ_INSTANCE_VARIABLE;
 import static org.operaton.bpm.engine.authorization.ProcessDefinitionPermissions.SUSPEND_INSTANCE;
 import static org.operaton.bpm.engine.authorization.ProcessDefinitionPermissions.UPDATE_INSTANCE_VARIABLE;
@@ -35,30 +34,18 @@ import static org.operaton.bpm.engine.authorization.Resources.PROCESS_DEFINITION
 import static org.operaton.bpm.engine.authorization.Resources.PROCESS_INSTANCE;
 import static org.operaton.bpm.engine.authorization.Resources.TASK;
 
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import org.operaton.bpm.engine.AuthorizationException;
-import org.operaton.bpm.engine.authorization.Authorization;
-import org.operaton.bpm.engine.impl.RuntimeServiceImpl;
-import org.operaton.bpm.engine.runtime.*;
-import org.operaton.bpm.engine.task.Task;
-import org.operaton.bpm.engine.variable.VariableMap;
-import org.operaton.bpm.engine.variable.value.TypedValue;
+
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+
 /**
  * @author Roman Smirnov
- *
  */
 public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
@@ -76,14 +63,14 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
   @Before
   public void setUp() {
     testRule.deploy(
-        "org/operaton/bpm/engine/test/api/oneTaskProcess.bpmn20.xml",
-        "org/operaton/bpm/engine/test/api/authorization/messageStartEventProcess.bpmn20.xml",
-        "org/operaton/bpm/engine/test/api/authorization/messageBoundaryEventProcess.bpmn20.xml",
-        "org/operaton/bpm/engine/test/api/authorization/signalBoundaryEventProcess.bpmn20.xml",
-        "org/operaton/bpm/engine/test/api/authorization/signalStartEventProcess.bpmn20.xml",
-        "org/operaton/bpm/engine/test/api/authorization/throwWarningSignalEventProcess.bpmn20.xml",
-        "org/operaton/bpm/engine/test/api/authorization/throwAlertSignalEventProcess.bpmn20.xml"
-        );
+      "org/operaton/bpm/engine/test/api/oneTaskProcess.bpmn20.xml",
+      "org/operaton/bpm/engine/test/api/authorization/messageStartEventProcess.bpmn20.xml",
+      "org/operaton/bpm/engine/test/api/authorization/messageBoundaryEventProcess.bpmn20.xml",
+      "org/operaton/bpm/engine/test/api/authorization/signalBoundaryEventProcess.bpmn20.xml",
+      "org/operaton/bpm/engine/test/api/authorization/signalStartEventProcess.bpmn20.xml",
+      "org/operaton/bpm/engine/test/api/authorization/throwWarningSignalEventProcess.bpmn20.xml",
+      "org/operaton/bpm/engine/test/api/authorization/throwAlertSignalEventProcess.bpmn20.xml"
+    );
     ensureSpecificVariablePermission = processEngineConfiguration.isEnforceSpecificVariablePermission();
     super.setUp();
   }
@@ -122,8 +109,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     verifyQueryResults(query, 1);
 
     ProcessInstance instance = query.singleResult();
-    assertNotNull(instance);
-    assertEquals(processInstanceId, instance.getId());
+    assertThat(instance).isNotNull();
+    assertThat(instance.getId()).isEqualTo(processInstanceId);
   }
 
   @Test
@@ -153,8 +140,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     verifyQueryResults(query, 1);
 
     ProcessInstance instance = query.singleResult();
-    assertNotNull(instance);
-    assertEquals(processInstanceId, instance.getId());
+    assertThat(instance).isNotNull();
+    assertThat(instance.getId()).isEqualTo(processInstanceId);
   }
 
   @Test
@@ -170,8 +157,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     verifyQueryResults(query, 1);
 
     ProcessInstance instance = query.singleResult();
-    assertNotNull(instance);
-    assertEquals(processInstanceId, instance.getId());
+    assertThat(instance).isNotNull();
+    assertThat(instance.getId()).isEqualTo(processInstanceId);
   }
 
   @Test
@@ -187,8 +174,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     verifyQueryResults(query, 1);
 
     ProcessInstance instance = query.singleResult();
-    assertNotNull(instance);
-    assertEquals(processInstanceId, instance.getId());
+    assertThat(instance).isNotNull();
+    assertThat(instance.getId()).isEqualTo(processInstanceId);
   }
 
   @Test
@@ -247,8 +234,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     verifyQueryResults(query, 1);
 
     ProcessInstance instance = query.singleResult();
-    assertNotNull(instance);
-    assertEquals(processInstanceId, instance.getId());
+    assertThat(instance).isNotNull();
+    assertThat(instance.getId()).isEqualTo(processInstanceId);
   }
 
   @Test
@@ -785,8 +772,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     List<String> activityIds = runtimeService.getActiveActivityIds(processInstanceId);
 
     // then
-    assertNotNull(activityIds);
-    assertFalse(activityIds.isEmpty());
+    assertThat(activityIds)
+      .isNotNull()
+      .isNotEmpty();
   }
 
   @Test
@@ -799,8 +787,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     List<String> activityIds = runtimeService.getActiveActivityIds(processInstanceId);
 
     // then
-    assertNotNull(activityIds);
-    assertFalse(activityIds.isEmpty());
+    assertThat(activityIds)
+      .isNotNull()
+      .isNotEmpty();
   }
 
   @Test
@@ -813,8 +802,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     List<String> activityIds = runtimeService.getActiveActivityIds(processInstanceId);
 
     // then
-    assertNotNull(activityIds);
-    assertFalse(activityIds.isEmpty());
+    assertThat(activityIds)
+      .isNotNull()
+      .isNotEmpty();
   }
 
   @Test
@@ -828,8 +818,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     List<String> activityIds = runtimeService.getActiveActivityIds(processInstanceId);
 
     // then
-    assertNotNull(activityIds);
-    assertFalse(activityIds.isEmpty());
+    assertThat(activityIds)
+      .isNotNull()
+      .isNotEmpty();
   }
 
   // get activity instance ///////////////////////////////////////////
@@ -863,7 +854,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     ActivityInstance activityInstance = runtimeService.getActivityInstance(processInstanceId);
 
     // then
-    assertNotNull(activityInstance);
+    assertThat(activityInstance).isNotNull();
   }
 
   @Test
@@ -876,7 +867,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     ActivityInstance activityInstance = runtimeService.getActivityInstance(processInstanceId);
 
     // then
-    assertNotNull(activityInstance);
+    assertThat(activityInstance).isNotNull();
   }
 
   @Test
@@ -889,7 +880,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     ActivityInstance activityInstance = runtimeService.getActivityInstance(processInstanceId);
 
     // then
-    assertNotNull(activityInstance);
+    assertThat(activityInstance).isNotNull();
   }
 
   @Test
@@ -903,7 +894,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     ActivityInstance activityInstance = runtimeService.getActivityInstance(processInstanceId);
 
     // then
-    assertNotNull(activityInstance);
+    assertThat(activityInstance).isNotNull();
   }
 
   // signal execution ///////////////////////////////////////////
@@ -977,7 +968,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     ActivityInstance activityInstance = runtimeService.getActivityInstance(processInstanceId);
 
     // then
-    assertNotNull(activityInstance);
+    assertThat(activityInstance).isNotNull();
   }
 
   // signal event received //////////////////////////////////////
@@ -1012,8 +1003,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1027,8 +1018,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1042,8 +1033,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1058,8 +1049,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1099,9 +1090,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     // then
     disableAuthorization();
     List<Task> tasks = taskService.createTaskQuery().list();
-    assertFalse(tasks.isEmpty());
+    assertThat(tasks).isNotEmpty();
     for (Task task : tasks) {
-      assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+      assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
     }
     enableAuthorization();
   }
@@ -1141,8 +1132,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1158,8 +1149,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1175,8 +1166,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1193,8 +1184,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1232,8 +1223,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("task", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("task");
   }
 
   /**
@@ -1263,8 +1254,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("task", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("task");
   }
 
   /**
@@ -1279,7 +1270,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // when
     assertThatThrownBy(() -> runtimeService.startProcessInstanceByKey(THROW_ALERT_SIGNAL_PROCESS_KEY))
-    // then
+      // then
       .isInstanceOf(AuthorizationException.class)
       .hasMessageContaining(userId)
       .hasMessageContaining(UPDATE.getName())
@@ -1306,8 +1297,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   // message event received /////////////////////////////////////
@@ -1345,8 +1336,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1362,8 +1353,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1379,8 +1370,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1397,8 +1388,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   // correlate message (correlates to an execution) /////////////
@@ -1433,8 +1424,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1448,8 +1439,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1463,8 +1454,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1479,8 +1470,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   // correlate message (correlates to a process definition) /////////////
@@ -1534,8 +1525,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("task", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("task");
   }
 
   // correlate all (correlates to executions) ///////////////////
@@ -1573,8 +1564,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1590,8 +1581,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1607,8 +1598,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1625,8 +1616,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
   }
 
   @Test
@@ -1670,9 +1661,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     // then
     disableAuthorization();
     List<Task> tasks = taskService.createTaskQuery().list();
-    assertFalse(tasks.isEmpty());
+    assertThat(tasks).isNotEmpty();
     for (Task task : tasks) {
-      assertEquals("taskAfterBoundaryEvent", task.getTaskDefinitionKey());
+      assertThat(task.getTaskDefinitionKey()).isEqualTo("taskAfterBoundaryEvent");
     }
     enableAuthorization();
   }
@@ -1733,8 +1724,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     Task task = selectSingleTask();
-    assertNotNull(task);
-    assertEquals("task", task.getTaskDefinitionKey());
+    assertThat(task).isNotNull();
+    assertThat(task.getTaskDefinitionKey()).isEqualTo("task");
   }
 
   // suspend process instance by id /////////////////////////////
@@ -1771,7 +1762,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -1785,7 +1776,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -1799,7 +1790,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -1814,7 +1805,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -1828,7 +1819,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -1842,7 +1833,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -1856,7 +1847,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   // activate process instance by id /////////////////////////////
@@ -1895,7 +1886,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -1910,7 +1901,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -1925,7 +1916,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -1941,7 +1932,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -1956,7 +1947,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -1971,7 +1962,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -1986,7 +1977,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   // suspend process instance by process definition id /////////////////////////////
@@ -1999,7 +1990,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     // when
     assertThatThrownBy(() -> runtimeService.suspendProcessInstanceByProcessDefinitionId(processDefinitionId))
       // then
-      .withFailMessage("Exception expected: It should not be posssible to suspend a process instance.")
+      .withFailMessage("Exception expected: It should not be possible to suspend a process instance.")
       .isInstanceOf(AuthorizationException.class)
       .hasMessageContaining(userId)
       .hasMessageContaining(UPDATE.getName())
@@ -2022,7 +2013,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     // when
     assertThatThrownBy(() -> runtimeService.suspendProcessInstanceByProcessDefinitionId(processDefinitionId))
       // then
-      .withFailMessage("Exception expected: It should not be posssible to suspend a process instance.")
+      .withFailMessage("Exception expected: It should not be possible to suspend a process instance.")
       .isInstanceOf(AuthorizationException.class)
       .hasMessageContaining(userId)
       .hasMessageContaining(UPDATE_INSTANCE.getName())
@@ -2045,7 +2036,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -2060,7 +2051,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -2078,7 +2069,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -2092,7 +2083,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     // when
     assertThatThrownBy(() -> runtimeService.suspendProcessInstanceByProcessDefinitionId(processDefinitionId))
       // then
-      .withFailMessage("Exception expected: It should not be posssible to suspend a process instance.")
+      .withFailMessage("Exception expected: It should not be possible to suspend a process instance.")
       .isInstanceOf(AuthorizationException.class)
       .hasMessageContaining(userId)
       .hasMessageContaining(UPDATE_INSTANCE.getName())
@@ -2115,7 +2106,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -2130,7 +2121,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
 
@@ -2198,7 +2189,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -2216,7 +2207,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -2235,7 +2226,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -2277,7 +2268,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -2295,7 +2286,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   // suspend process instance by process definition key /////////////////////////////
@@ -2352,7 +2343,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -2366,7 +2357,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -2383,7 +2374,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -2418,7 +2409,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   @Test
@@ -2432,7 +2423,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     ProcessInstance instance = selectSingleProcessInstance();
-    assertTrue(instance.isSuspended());
+    assertThat(instance.isSuspended()).isTrue();
   }
 
   // activate process instance by process definition key /////////////////////////////
@@ -2496,7 +2487,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -2513,7 +2504,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -2531,7 +2522,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -2571,7 +2562,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   @Test
@@ -2588,7 +2579,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     // then
     instance = selectSingleProcessInstance();
-    assertFalse(instance.isSuspended());
+    assertThat(instance.isSuspended()).isFalse();
   }
 
   // modify process instance /////////////////////////////////////
@@ -2629,8 +2620,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     List<Task> tasks = taskService.createTaskQuery().list();
     enableAuthorization();
 
-    assertFalse(tasks.isEmpty());
-    assertEquals(2, tasks.size());
+    assertThat(tasks)
+      .isNotEmpty()
+      .hasSize(2);
   }
 
   @Test
@@ -2649,8 +2641,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     List<Task> tasks = taskService.createTaskQuery().list();
     enableAuthorization();
 
-    assertFalse(tasks.isEmpty());
-    assertEquals(2, tasks.size());
+    assertThat(tasks)
+      .isNotEmpty()
+      .hasSize(2);
   }
 
   @Test
@@ -2669,8 +2662,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     List<Task> tasks = taskService.createTaskQuery().list();
     enableAuthorization();
 
-    assertFalse(tasks.isEmpty());
-    assertEquals(2, tasks.size());
+    assertThat(tasks)
+      .isNotEmpty()
+      .hasSize(2);
   }
 
   @Test
@@ -2690,8 +2684,9 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     List<Task> tasks = taskService.createTaskQuery().list();
     enableAuthorization();
 
-    assertFalse(tasks.isEmpty());
-    assertEquals(2, tasks.size());
+    assertThat(tasks)
+      .isNotEmpty()
+      .hasSize(2);
   }
 
   @Test
@@ -2777,11 +2772,11 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     disableAuthorization();
     Authorization authorization = authorizationService
-        .createAuthorizationQuery()
-        .resourceId(processInstanceId)
-        .singleResult();
+      .createAuthorizationQuery()
+      .resourceId(processInstanceId)
+      .singleResult();
     enableAuthorization();
-    assertNotNull(authorization);
+    assertThat(authorization).isNotNull();
 
     String taskId = selectSingleTask().getId();
 
@@ -2791,12 +2786,12 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     // then
     disableAuthorization();
     authorization = authorizationService
-        .createAuthorizationQuery()
-        .resourceId(processInstanceId)
-        .singleResult();
+      .createAuthorizationQuery()
+      .resourceId(processInstanceId)
+      .singleResult();
     enableAuthorization();
 
-    assertNull(authorization);
+    assertThat(authorization).isNull();
   }
 
   @Test
@@ -2807,11 +2802,11 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
     disableAuthorization();
     Authorization authorization = authorizationService
-        .createAuthorizationQuery()
-        .resourceId(processInstanceId)
-        .singleResult();
+      .createAuthorizationQuery()
+      .resourceId(processInstanceId)
+      .singleResult();
     enableAuthorization();
-    assertNotNull(authorization);
+    assertThat(authorization).isNotNull();
 
     // when
     runtimeService.deleteProcessInstance(processInstanceId, null);
@@ -2819,12 +2814,12 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     // then
     disableAuthorization();
     authorization = authorizationService
-        .createAuthorizationQuery()
-        .resourceId(processInstanceId)
-        .singleResult();
+      .createAuthorizationQuery()
+      .resourceId(processInstanceId)
+      .singleResult();
     enableAuthorization();
 
-    assertNull(authorization);
+    assertThat(authorization).isNull();
   }
 
   // RuntimeService#getVariable() ////////////////////////////////////////////
@@ -2868,7 +2863,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariable(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -2881,7 +2876,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariable(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -2894,7 +2889,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariable(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -2907,7 +2902,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariable(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -2921,7 +2916,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariable(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -2935,7 +2930,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariable(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   // RuntimeService#getVariableLocal() ////////////////////////////////////////////
@@ -2982,7 +2977,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariableLocal(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -2995,7 +2990,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariableLocal(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3008,7 +3003,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariableLocal(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3021,7 +3016,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariableLocal(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3035,7 +3030,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariableLocal(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3049,7 +3044,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Object variable = runtimeService.getVariableLocal(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertEquals(VARIABLE_VALUE, variable);
+    assertThat(variable).isEqualTo(VARIABLE_VALUE);
   }
 
   // RuntimeService#getVariableTyped() ////////////////////////////////////////////
@@ -3096,8 +3091,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3110,8 +3105,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3124,8 +3119,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3138,8 +3133,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3153,8 +3148,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3168,8 +3163,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   // RuntimeService#getVariableLocalTyped() ////////////////////////////////////////////
@@ -3216,8 +3211,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableLocalTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3230,8 +3225,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableLocalTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3244,8 +3239,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableLocalTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3258,8 +3253,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableLocalTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3273,8 +3268,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableLocalTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   @Test
@@ -3288,8 +3283,8 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     TypedValue typedValue = runtimeService.getVariableLocalTyped(processInstanceId, VARIABLE_NAME);
 
     // then
-    assertNotNull(typedValue);
-    assertEquals(VARIABLE_VALUE, typedValue.getValue());
+    assertThat(typedValue).isNotNull();
+    assertThat(typedValue.getValue()).isEqualTo(VARIABLE_VALUE);
   }
 
   // RuntimeService#getVariables() ////////////////////////////////////////////
@@ -3336,11 +3331,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Map<String, Object> variables = runtimeService.getVariables(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    assertThat(variables)
+      .isNotNull()
+      .hasSize(1)
+      .containsEntry(VARIABLE_NAME, VARIABLE_VALUE);
   }
 
   @Test
@@ -3353,11 +3347,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Map<String, Object> variables = runtimeService.getVariables(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    assertThat(variables)
+      .isNotNull()
+      .hasSize(1)
+      .containsEntry(VARIABLE_NAME, VARIABLE_VALUE);
   }
 
   @Test
@@ -3370,11 +3363,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Map<String, Object> variables = runtimeService.getVariables(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    assertThat(variables)
+      .isNotNull()
+      .hasSize(1)
+      .containsEntry(VARIABLE_NAME, VARIABLE_VALUE);
   }
 
   @Test
@@ -3387,11 +3379,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Map<String, Object> variables = runtimeService.getVariables(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3468,11 +3456,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3485,11 +3469,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3502,11 +3482,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3519,11 +3495,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3600,11 +3572,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     VariableMap variables = runtimeService.getVariablesTyped(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3617,11 +3585,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     VariableMap variables = runtimeService.getVariablesTyped(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3634,11 +3598,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     VariableMap variables = runtimeService.getVariablesTyped(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3651,11 +3611,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     VariableMap variables = runtimeService.getVariablesTyped(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3732,11 +3688,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3749,11 +3701,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3766,11 +3714,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3783,11 +3727,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3860,14 +3800,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_INSTANCE, processInstanceId, userId, READ);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3877,14 +3813,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_INSTANCE, ANY, userId, READ);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3894,14 +3826,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, PROCESS_KEY, userId, READ_INSTANCE);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3911,14 +3839,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, ANY, userId, READ_INSTANCE);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -3929,7 +3853,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, PROCESS_KEY, userId, READ_INSTANCE_VARIABLE);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
     verifyGetVariables(variables);
@@ -3943,7 +3867,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, ANY, userId, READ_INSTANCE_VARIABLE);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariables(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
     verifyGetVariables(variables);
@@ -3991,14 +3915,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_INSTANCE, processInstanceId, userId, READ);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4008,14 +3928,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_INSTANCE, ANY, userId, READ);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4025,14 +3941,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, PROCESS_KEY, userId, READ_INSTANCE);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4042,14 +3954,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, ANY, userId, READ_INSTANCE);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4060,7 +3968,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, PROCESS_KEY, userId, READ_INSTANCE_VARIABLE);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
     verifyGetVariables(variables);
@@ -4074,7 +3982,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, ANY, userId, READ_INSTANCE_VARIABLE);
 
     // when
-    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = runtimeService.getVariablesLocal(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
     verifyGetVariables(variables);
@@ -4122,14 +4030,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_INSTANCE, processInstanceId, userId, READ);
 
     // when
-    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4139,14 +4043,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_INSTANCE, ANY, userId, READ);
 
     // when
-    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4156,14 +4056,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, PROCESS_KEY, userId, READ_INSTANCE);
 
     // when
-    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4173,14 +4069,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, ANY, userId, READ_INSTANCE);
 
     // when
-    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4191,7 +4083,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, PROCESS_KEY, userId, READ_INSTANCE_VARIABLE);
 
     // when
-    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
     verifyGetVariables(variables);
@@ -4205,7 +4097,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, ANY, userId, READ_INSTANCE_VARIABLE);
 
     // when
-    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
     verifyGetVariables(variables);
@@ -4253,14 +4145,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_INSTANCE, processInstanceId, userId, READ);
 
     // when
-    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4270,14 +4158,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_INSTANCE, ANY, userId, READ);
 
     // when
-    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4287,14 +4171,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, PROCESS_KEY, userId, READ_INSTANCE);
 
     // when
-    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4304,14 +4184,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, ANY, userId, READ_INSTANCE);
 
     // when
-    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    verifyGetVariables(variables);
   }
 
   @Test
@@ -4322,7 +4198,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, PROCESS_KEY, userId, READ_INSTANCE_VARIABLE);
 
     // when
-    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
     verifyGetVariables(variables);
@@ -4336,7 +4212,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
     createGrantAuthorization(PROCESS_DEFINITION, ANY, userId, READ_INSTANCE_VARIABLE);
 
     // when
-    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = runtimeService.getVariablesLocalTyped(processInstanceId, List.of(VARIABLE_NAME), false);
 
     // then
     verifyGetVariables(variables);
@@ -5334,7 +5210,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
   protected void verifyRemoveVariables(String processInstanceId) {
     // when
-    runtimeService.removeVariables(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    runtimeService.removeVariables(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
     verifyVariableInstanceCountDisabledAuthorization(0);
@@ -5342,7 +5218,7 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
   protected void verifyRemoveVariablesLocal(String processInstanceId) {
     // when
-    runtimeService.removeVariablesLocal(processInstanceId, Arrays.asList(VARIABLE_NAME));
+    runtimeService.removeVariablesLocal(processInstanceId, List.of(VARIABLE_NAME));
 
     // then
     verifyVariableInstanceCountDisabledAuthorization(0);
@@ -5350,19 +5226,19 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
   protected void verifyUpdateVariables(String processInstanceId) {
     // when (1)
-    ((RuntimeServiceImpl)runtimeService).updateVariables(processInstanceId, getVariables(), null);
+    ((RuntimeServiceImpl) runtimeService).updateVariables(processInstanceId, getVariables(), null);
 
     // then (1)
     verifyVariableInstanceCountDisabledAuthorization(1);
 
     // when (2)
-    ((RuntimeServiceImpl)runtimeService).updateVariables(processInstanceId, null, Arrays.asList(VARIABLE_NAME));
+    ((RuntimeServiceImpl) runtimeService).updateVariables(processInstanceId, null, List.of(VARIABLE_NAME));
 
     // then (2)
     verifyVariableInstanceCountDisabledAuthorization(0);
 
     // when (3)
-    ((RuntimeServiceImpl)runtimeService).updateVariables(processInstanceId, getVariables(), Arrays.asList(VARIABLE_NAME));
+    ((RuntimeServiceImpl) runtimeService).updateVariables(processInstanceId, getVariables(), List.of(VARIABLE_NAME));
 
     // then (3)
     verifyVariableInstanceCountDisabledAuthorization(0);
@@ -5370,19 +5246,19 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
 
   protected void verifyUpdateVariablesLocal(String processInstanceId) {
     // when (1)
-    ((RuntimeServiceImpl)runtimeService).updateVariablesLocal(processInstanceId, getVariables(), null);
+    ((RuntimeServiceImpl) runtimeService).updateVariablesLocal(processInstanceId, getVariables(), null);
 
     // then (1)
     verifyVariableInstanceCountDisabledAuthorization(1);
 
     // when (2)
-    ((RuntimeServiceImpl)runtimeService).updateVariablesLocal(processInstanceId, null, Arrays.asList(VARIABLE_NAME));
+    ((RuntimeServiceImpl) runtimeService).updateVariablesLocal(processInstanceId, null, List.of(VARIABLE_NAME));
 
     // then (2)
     verifyVariableInstanceCountDisabledAuthorization(0);
 
     // when (3)
-    ((RuntimeServiceImpl)runtimeService).updateVariablesLocal(processInstanceId, getVariables(), Arrays.asList(VARIABLE_NAME));
+    ((RuntimeServiceImpl) runtimeService).updateVariablesLocal(processInstanceId, getVariables(), List.of(VARIABLE_NAME));
 
     // then (3)
     verifyVariableInstanceCountDisabledAuthorization(0);
@@ -5393,11 +5269,10 @@ public class ProcessInstanceAuthorizationTest extends AuthorizationTest {
   }
 
   protected void verifyGetVariables(Map<String, Object> variables) {
-    assertNotNull(variables);
-    assertFalse(variables.isEmpty());
-    assertEquals(1, variables.size());
-
-    assertEquals(VARIABLE_VALUE, variables.get(VARIABLE_NAME));
+    assertThat(variables)
+      .isNotNull()
+      .hasSize(1)
+      .containsEntry(VARIABLE_NAME, VARIABLE_VALUE);
   }
 
 }
