@@ -17,11 +17,7 @@
 package org.operaton.bpm.engine.test.history;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.assertj.core.api.Assertions.fail;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -63,9 +59,9 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     HistoricCaseInstance historicInstance = queryHistoricCaseInstance(caseInstance.getId());
 
     // assert case instance properties are set correctly
-    assertEquals(caseInstance.getId(), historicInstance.getId());
-    assertEquals(caseInstance.getBusinessKey(), historicInstance.getBusinessKey());
-    assertEquals(caseInstance.getCaseDefinitionId(), historicInstance.getCaseDefinitionId());
+    assertThat(historicInstance.getId()).isEqualTo(caseInstance.getId());
+    assertThat(historicInstance.getBusinessKey()).isEqualTo(caseInstance.getBusinessKey());
+    assertThat(historicInstance.getCaseDefinitionId()).isEqualTo(caseInstance.getCaseDefinitionId());
   }
 
   @Deployment(resources={"org/operaton/bpm/engine/test/api/cmmn/emptyStageWithManualActivationCase.cmmn"})
@@ -75,7 +71,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
     HistoricCaseInstance historicCaseInstance = queryHistoricCaseInstance(caseInstanceId);
 
-    assertTrue(historicCaseInstance.isActive());
+    assertThat(historicCaseInstance.isActive()).isTrue();
     assertCount(1, historicQuery().active());
     assertCount(1, historicQuery().notClosed());
 
@@ -84,7 +80,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     manualStart(stageExecutionId);
 
     historicCaseInstance = queryHistoricCaseInstance(caseInstanceId);
-    assertTrue(historicCaseInstance.isCompleted());
+    assertThat(historicCaseInstance.isCompleted()).isTrue();
     assertCount(1, historicQuery().completed());
     assertCount(1, historicQuery().notClosed());
 
@@ -93,7 +89,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     terminate(caseInstanceId);
 
     historicCaseInstance = queryHistoricCaseInstance(caseInstanceId);
-    assertTrue(historicCaseInstance.isTerminated());
+    assertThat(historicCaseInstance.isTerminated()).isTrue();
     assertCount(1, historicQuery().terminated());
     assertCount(1, historicQuery().notClosed());
 
@@ -103,7 +99,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
     historicCaseInstance = queryHistoricCaseInstance(caseInstanceId);
     // not public API
-    assertTrue(((HistoricCaseInstanceEntity) historicCaseInstance).isSuspended());
+    assertThat(((HistoricCaseInstanceEntity) historicCaseInstance).isSuspended()).isTrue();
 //    assertCount(1, historicQuery().suspended());
     assertCount(1, historicQuery().notClosed());
 
@@ -111,7 +107,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     close(caseInstanceId);
 
     historicCaseInstance = queryHistoricCaseInstance(caseInstanceId);
-    assertTrue(historicCaseInstance.isClosed());
+    assertThat(historicCaseInstance.isClosed()).isTrue();
     assertCount(1, historicQuery().closed());
     assertCount(0, historicQuery().notClosed());
   }
@@ -145,8 +141,9 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     assertDateSimilar(closed, closeTime);
 
     // test that duration is as expected with a maximal difference of one second
-    assertTrue(durationInMillis >= duration);
-    assertTrue(durationInMillis < duration + 1000);
+    assertThat(durationInMillis)
+      .isGreaterThanOrEqualTo(duration)
+      .isLessThan(duration + 1000);
 
     // test queries
     Date beforeCreate = new Date(created.getTime() - 3600 * 1000);
@@ -180,7 +177,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     String caseInstanceId = createCaseInstance().getId();
 
     HistoricCaseInstance historicCaseInstance = queryHistoricCaseInstance(caseInstanceId);
-    assertEquals(userId, historicCaseInstance.getCreateUserId());
+    assertThat(historicCaseInstance.getCreateUserId()).isEqualTo(userId);
     assertCount(1, historicQuery().createdBy(userId));
 
     identityService.setAuthenticatedUserId(null);
@@ -199,15 +196,15 @@ public class HistoricCaseInstanceTest extends CmmnTest {
       .superCaseInstanceId(caseInstanceId)
       .singleResult();
 
-    assertNotNull(historicCaseInstance);
-    assertEquals(caseInstanceId, historicCaseInstance.getSuperCaseInstanceId());
+    assertThat(historicCaseInstance).isNotNull();
+    assertThat(historicCaseInstance.getSuperCaseInstanceId()).isEqualTo(caseInstanceId);
 
     String superCaseInstanceId = historicQuery()
       .subCaseInstanceId(historicCaseInstance.getId())
       .singleResult()
       .getId();
 
-    assertEquals(caseInstanceId, superCaseInstanceId);
+    assertThat(superCaseInstanceId).isEqualTo(caseInstanceId);
   }
 
   @Deployment(resources = {
@@ -237,10 +234,10 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
     assertCount(1, historicQuery().caseDefinitionKey("oneTaskCase"));
 
-    assertCount(3, historicQuery().caseDefinitionKeyNotIn(Arrays.asList("unknown")));
-    assertCount(2, historicQuery().caseDefinitionKeyNotIn(Arrays.asList("oneTaskCase")));
-    assertCount(1, historicQuery().caseDefinitionKeyNotIn(Arrays.asList("oneTaskCase", "twoTaskCase")));
-    assertCount(0, historicQuery().caseDefinitionKeyNotIn(Arrays.asList("oneTaskCase")).caseDefinitionKey("oneTaskCase"));
+    assertCount(3, historicQuery().caseDefinitionKeyNotIn(List.of("unknown")));
+    assertCount(2, historicQuery().caseDefinitionKeyNotIn(List.of("oneTaskCase")));
+    assertCount(1, historicQuery().caseDefinitionKeyNotIn(List.of("oneTaskCase", "twoTaskCase")));
+    assertCount(0, historicQuery().caseDefinitionKeyNotIn(List.of("oneTaskCase")).caseDefinitionKey("oneTaskCase"));
     var emptyCaseDefinitionKeys = List.of("");
     var historicCaseInstanceQuery = historicQuery();
 
@@ -349,12 +346,12 @@ public class HistoricCaseInstanceTest extends CmmnTest {
       .setVariable("var", "123")
       .create();
 
-    assertEquals(4, historicQuery().variableValueEquals("var", Variables.numberValue(123)).count());
-    assertEquals(4, historicQuery().variableValueEquals("var", Variables.numberValue(123L)).count());
-    assertEquals(4, historicQuery().variableValueEquals("var", Variables.numberValue(123.0d)).count());
-    assertEquals(4, historicQuery().variableValueEquals("var", Variables.numberValue((short) 123)).count());
+    assertThat(historicQuery().variableValueEquals("var", Variables.numberValue(123)).count()).isEqualTo(4);
+    assertThat(historicQuery().variableValueEquals("var", Variables.numberValue(123L)).count()).isEqualTo(4);
+    assertThat(historicQuery().variableValueEquals("var", Variables.numberValue(123.0d)).count()).isEqualTo(4);
+    assertThat(historicQuery().variableValueEquals("var", Variables.numberValue((short) 123)).count()).isEqualTo(4);
 
-    assertEquals(1, historicQuery().variableValueEquals("var", Variables.numberValue(null)).count());
+    assertThat(historicQuery().variableValueEquals("var", Variables.numberValue(null)).count()).isEqualTo(1);
   }
 
 
@@ -366,9 +363,9 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     createCaseInstance();
     createCaseInstance();
 
-    assertEquals(3, historicQuery().listPage(0, 3).size());
-    assertEquals(2, historicQuery().listPage(2, 2).size());
-    assertEquals(1, historicQuery().listPage(3, 2).size());
+    assertThat(historicQuery().listPage(0, 3)).hasSize(3);
+    assertThat(historicQuery().listPage(2, 2)).hasSize(2);
+    assertThat(historicQuery().listPage(3, 2)).hasSize(1);
   }
 
   @Deployment(resources = {
@@ -393,15 +390,16 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     HistoricCaseInstance twoCaseInstance = queryHistoricCaseInstance(twoCaseInstanceId);
 
     // sort by case instance ids
+    @SuppressWarnings("rawtypes")
     List<? extends Comparable> sortedList = Arrays.asList(oneCaseInstance.getId(), twoCaseInstance.getId());
     Collections.sort(sortedList);
 
     List<HistoricCaseInstance> instances = historicQuery().orderByCaseInstanceId().asc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("id").containsExactly(sortedList.get(0), sortedList.get(1));
 
     instances = historicQuery().orderByCaseInstanceId().desc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("id").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by case definition ids
@@ -409,11 +407,11 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseDefinitionId().asc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("caseDefinitionId").containsExactly(sortedList.get(0), sortedList.get(1));
 
     instances = historicQuery().orderByCaseDefinitionId().desc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("caseDefinitionId").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by business keys
@@ -421,11 +419,11 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseInstanceBusinessKey().asc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("businessKey").containsExactly(sortedList.get(0), sortedList.get(1));
 
     instances = historicQuery().orderByCaseInstanceBusinessKey().desc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("businessKey").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by create time
@@ -433,11 +431,11 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseInstanceCreateTime().asc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("createTime").containsExactly(sortedList.get(0), sortedList.get(1));
 
     instances = historicQuery().orderByCaseInstanceCreateTime().desc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("createTime").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by close time
@@ -445,11 +443,11 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseInstanceCloseTime().asc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("closeTime").containsExactly(sortedList.get(0), sortedList.get(1));
 
     instances = historicQuery().orderByCaseInstanceCloseTime().desc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("closeTime").containsExactly(sortedList.get(1), sortedList.get(0));
 
     // sort by duration
@@ -457,11 +455,11 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     Collections.sort(sortedList);
 
     instances = historicQuery().orderByCaseInstanceDuration().asc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("durationInMillis").containsExactly(sortedList.get(0), sortedList.get(1));
 
     instances = historicQuery().orderByCaseInstanceDuration().desc().list();
-    assertEquals(2, instances.size());
+    assertThat(instances).hasSize(2);
     assertThat(instances).extracting("durationInMillis").containsExactly(sortedList.get(1), sortedList.get(0));
 
   }
@@ -474,7 +472,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
       fail("Exception expected");
     }
     catch (ProcessEngineException e) {
-      assertEquals("You should call any of the orderBy methods first before specifying a direction: currentOrderingProperty is null", e.getMessage());
+      assertThat(e.getMessage()).isEqualTo("You should call any of the orderBy methods first before specifying a direction: currentOrderingProperty is null");
     }
 
     try {
@@ -482,7 +480,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
       fail("Exception expected");
     }
     catch (ProcessEngineException e) {
-      assertEquals("You should call any of the orderBy methods first before specifying a direction: currentOrderingProperty is null", e.getMessage());
+      assertThat(e.getMessage()).isEqualTo("You should call any of the orderBy methods first before specifying a direction: currentOrderingProperty is null");
     }
 
     var historicCaseInstanceQuery1 = historicCaseInstanceQuery.orderByCaseInstanceId();
@@ -491,7 +489,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
       fail("Exception expected");
     }
     catch (ProcessEngineException e) {
-      assertEquals("Invalid query: call asc() or desc() after using orderByXX(): direction is null", e.getMessage());
+      assertThat(e.getMessage()).isEqualTo("Invalid query: call asc() or desc() after using orderByXX(): direction is null");
     }
   }
 
@@ -506,22 +504,22 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     String tablePrefix = processEngineConfiguration.getDatabaseTablePrefix();
     String tableName = managementService.getTableName(HistoricCaseInstance.class);
 
-    assertEquals(tablePrefix + "ACT_HI_CASEINST", tableName);
-    assertEquals(tableName, managementService.getTableName(HistoricCaseInstanceEntity.class));
+    assertThat(tableName).isEqualTo(tablePrefix + "ACT_HI_CASEINST");
+    assertThat(managementService.getTableName(HistoricCaseInstanceEntity.class)).isEqualTo(tableName);
 
-    assertEquals(4, historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT * FROM " + tableName).list().size());
-    assertEquals(4, historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT count(*) FROM " + tableName).count());
+    assertThat(historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT * FROM " + tableName).list()).hasSize(4);
+    assertThat(historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT count(*) FROM " + tableName).count()).isEqualTo(4);
 
-    assertEquals(16, historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT count(*) FROM " + tableName + " H1, " + tableName + " H2").count());
+    assertThat(historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT count(*) FROM " + tableName + " H1, " + tableName + " H2").count()).isEqualTo(16);
 
     // select with distinct
-    assertEquals(4, historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT DISTINCT * FROM " + tableName).list().size());
+    assertThat(historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT DISTINCT * FROM " + tableName).list()).hasSize(4);
 
-    assertEquals(1, historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT count(*) FROM " + tableName + " H WHERE H.ID_ = '" + id + "'").count());
-    assertEquals(1, historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT * FROM " + tableName + " H WHERE H.ID_ = '" + id + "'").list().size());
+    assertThat(historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT count(*) FROM " + tableName + " H WHERE H.ID_ = '" + id + "'").count()).isEqualTo(1);
+    assertThat(historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT * FROM " + tableName + " H WHERE H.ID_ = '" + id + "'").list()).hasSize(1);
 
     // use parameters
-    assertEquals(1, historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT count(*) FROM " + tableName + " H WHERE H.ID_ = #{caseInstanceId}").parameter("caseInstanceId", id).count());
+    assertThat(historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT count(*) FROM " + tableName + " H WHERE H.ID_ = #{caseInstanceId}").parameter("caseInstanceId", id).count()).isEqualTo(1);
   }
 
   @Deployment(resources = {"org/operaton/bpm/engine/test/api/cmmn/oneTaskCase.cmmn"})
@@ -533,8 +531,8 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     createCaseInstance();
 
     String tableName = managementService.getTableName(HistoricCaseInstance.class);
-    assertEquals(3, historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT * FROM " + tableName).listPage(0, 3).size());
-    assertEquals(2, historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT * FROM " + tableName).listPage(2, 2).size());
+    assertThat(historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT * FROM " + tableName).listPage(0, 3)).hasSize(3);
+    assertThat(historyService.createNativeHistoricCaseInstanceQuery().sql("SELECT * FROM " + tableName).listPage(2, 2)).hasSize(2);
   }
 
   @Deployment(resources={"org/operaton/bpm/engine/test/api/cmmn/emptyStageWithManualActivationCase.cmmn"})
@@ -544,7 +542,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
     String caseInstanceId = caseInstance.getId();
     HistoricCaseInstance historicInstance = queryHistoricCaseInstance(caseInstanceId);
-    assertNotNull(historicInstance);
+    assertThat(historicInstance).isNotNull();
     var historicInstanceId = historicInstance.getId();
 
     try {
@@ -565,15 +563,15 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
     if (processEngineConfiguration.getHistoryLevel().getId() >= HistoryLevel.HISTORY_LEVEL_FULL.getId()) {
       // a user operation log should have been created
-      assertEquals(1, historyService.createUserOperationLogQuery().count());
+      assertThat(historyService.createUserOperationLogQuery().count()).isEqualTo(1);
       UserOperationLogEntry entry = historyService.createUserOperationLogQuery().singleResult();
-      assertEquals(UserOperationLogEntry.CATEGORY_OPERATOR, entry.getCategory());
-      assertEquals(EntityTypes.CASE_INSTANCE, entry.getEntityType());
-      assertEquals(UserOperationLogEntry.OPERATION_TYPE_DELETE_HISTORY, entry.getOperationType());
-      assertEquals(caseInstanceId, entry.getCaseInstanceId());
-      assertNull(entry.getProperty());
-      assertNull(entry.getOrgValue());
-      assertNull(entry.getNewValue());
+      assertThat(entry.getCategory()).isEqualTo(UserOperationLogEntry.CATEGORY_OPERATOR);
+      assertThat(entry.getEntityType()).isEqualTo(EntityTypes.CASE_INSTANCE);
+      assertThat(entry.getOperationType()).isEqualTo(UserOperationLogEntry.OPERATION_TYPE_DELETE_HISTORY);
+      assertThat(entry.getCaseInstanceId()).isEqualTo(caseInstanceId);
+      assertThat(entry.getProperty()).isNull();
+      assertThat(entry.getOrgValue()).isNull();
+      assertThat(entry.getNewValue()).isNull();
     }
 
     assertCount(0, historicQuery());
@@ -591,13 +589,13 @@ public class HistoricCaseInstanceTest extends CmmnTest {
         .createHistoricCaseInstanceQuery()
         .superProcessInstanceId(superProcessInstanceId);
 
-    assertEquals(1, query.list().size());
-    assertEquals(1, query.count());
+    assertThat(query.list()).hasSize(1);
+    assertThat(query.count()).isEqualTo(1);
 
     HistoricCaseInstance subCaseInstance = query.singleResult();
-    assertNotNull(subCaseInstance);
-    assertEquals(superProcessInstanceId, subCaseInstance.getSuperProcessInstanceId());
-    assertNull(subCaseInstance.getSuperCaseInstanceId());
+    assertThat(subCaseInstance).isNotNull();
+    assertThat(subCaseInstance.getSuperProcessInstanceId()).isEqualTo(superProcessInstanceId);
+    assertThat(subCaseInstance.getSuperCaseInstanceId()).isNull();
   }
 
   @Test
@@ -606,13 +604,13 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
     query.superProcessInstanceId("invalid");
 
-    assertEquals(0, query.count());
-    assertEquals(0, query.list().size());
+    assertThat(query.count()).isZero();
+    assertThat(query.list()).isEmpty();
 
     query.caseInstanceId(null);
 
-    assertEquals(0, query.count());
-    assertEquals(0, query.list().size());
+    assertThat(query.count()).isZero();
+    assertThat(query.list()).isEmpty();
 
   }
 
@@ -633,13 +631,13 @@ public class HistoricCaseInstanceTest extends CmmnTest {
         .createHistoricCaseInstanceQuery()
         .subProcessInstanceId(subProcessInstanceId);
 
-    assertEquals(1, query.list().size());
-    assertEquals(1, query.count());
+    assertThat(query.list()).hasSize(1);
+    assertThat(query.count()).isEqualTo(1);
 
     HistoricCaseInstance caseInstance = query.singleResult();
-    assertEquals(superCaseInstanceId, caseInstance.getId());
-    assertNull(caseInstance.getSuperCaseInstanceId());
-    assertNull(caseInstance.getSuperProcessInstanceId());
+    assertThat(caseInstance.getId()).isEqualTo(superCaseInstanceId);
+    assertThat(caseInstance.getSuperCaseInstanceId()).isNull();
+    assertThat(caseInstance.getSuperProcessInstanceId()).isNull();
   }
 
   @Test
@@ -648,13 +646,13 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
     query.subProcessInstanceId("invalid");
 
-    assertEquals(0, query.count());
-    assertEquals(0, query.list().size());
+    assertThat(query.count()).isZero();
+    assertThat(query.list()).isEmpty();
 
     query.caseInstanceId(null);
 
-    assertEquals(0, query.count());
-    assertEquals(0, query.list().size());
+    assertThat(query.count()).isZero();
+    assertThat(query.list()).isEmpty();
 
   }
 
@@ -670,12 +668,12 @@ public class HistoricCaseInstanceTest extends CmmnTest {
         .createHistoricCaseInstanceQuery()
         .superCaseInstanceId(superCaseInstanceId);
 
-    assertEquals(1, query.list().size());
-    assertEquals(1, query.count());
+    assertThat(query.list()).hasSize(1);
+    assertThat(query.count()).isEqualTo(1);
 
     HistoricCaseInstance caseInstance = query.singleResult();
-    assertEquals(superCaseInstanceId, caseInstance.getSuperCaseInstanceId());
-    assertNull(caseInstance.getSuperProcessInstanceId());
+    assertThat(caseInstance.getSuperCaseInstanceId()).isEqualTo(superCaseInstanceId);
+    assertThat(caseInstance.getSuperProcessInstanceId()).isNull();
   }
 
   @Test
@@ -684,13 +682,13 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
     query.superCaseInstanceId("invalid");
 
-    assertEquals(0, query.count());
-    assertEquals(0, query.list().size());
+    assertThat(query.count()).isZero();
+    assertThat(query.list()).isEmpty();
 
     query.caseInstanceId(null);
 
-    assertEquals(0, query.count());
-    assertEquals(0, query.list().size());
+    assertThat(query.count()).isZero();
+    assertThat(query.list()).isEmpty();
 
   }
 
@@ -712,13 +710,13 @@ public class HistoricCaseInstanceTest extends CmmnTest {
         .createHistoricCaseInstanceQuery()
         .subCaseInstanceId(subCaseInstanceId);
 
-    assertEquals(1, query.list().size());
-    assertEquals(1, query.count());
+    assertThat(query.list()).hasSize(1);
+    assertThat(query.count()).isEqualTo(1);
 
     HistoricCaseInstance caseInstance = query.singleResult();
-    assertEquals(superCaseInstanceId, caseInstance.getId());
-    assertNull(caseInstance.getSuperProcessInstanceId());
-    assertNull(caseInstance.getSuperCaseInstanceId());
+    assertThat(caseInstance.getId()).isEqualTo(superCaseInstanceId);
+    assertThat(caseInstance.getSuperProcessInstanceId()).isNull();
+    assertThat(caseInstance.getSuperCaseInstanceId()).isNull();
   }
 
   @Test
@@ -727,13 +725,13 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
     query.subCaseInstanceId("invalid");
 
-    assertEquals(0, query.count());
-    assertEquals(0, query.list().size());
+    assertThat(query.count()).isZero();
+    assertThat(query.list()).isEmpty();
 
     query.caseInstanceId(null);
 
-    assertEquals(0, query.count());
-    assertEquals(0, query.list().size());
+    assertThat(query.count()).isZero();
+    assertThat(query.list()).isEmpty();
   }
 
   @Deployment(resources = {
@@ -750,8 +748,8 @@ public class HistoricCaseInstanceTest extends CmmnTest {
       .caseActivityIdIn("PI_HumanTask_1");
 
     // then
-    assertEquals(1, query.list().size());
-    assertEquals(1, query.count());
+    assertThat(query.list()).hasSize(1);
+    assertThat(query.count()).isEqualTo(1);
   }
 
   @Deployment(resources = {
@@ -769,8 +767,8 @@ public class HistoricCaseInstanceTest extends CmmnTest {
       .caseActivityIdIn("PI_HumanTask_1", "PI_CaseTask_1");
 
     // then
-    assertEquals(2, query.list().size());
-    assertEquals(2, query.count());
+    assertThat(query.list()).hasSize(2);
+    assertThat(query.count()).isEqualTo(2);
   }
 
   @Deployment(resources = {
@@ -787,8 +785,8 @@ public class HistoricCaseInstanceTest extends CmmnTest {
       .caseActivityIdIn("PI_HumanTask_1", "PI_HumanTask_2");
 
     // then
-    assertEquals(1, query.list().size());
-    assertEquals(1, query.count());
+    assertThat(query.list()).hasSize(1);
+    assertThat(query.count()).isEqualTo(1);
   }
 
   @Test
@@ -797,7 +795,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
         .createHistoricCaseInstanceQuery()
         .caseActivityIdIn("nonExisting");
 
-    assertEquals(0, query.count());
+    assertThat(query.count()).isZero();
   }
 
   @Test
@@ -808,6 +806,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
 
       fail("expected exception");
     } catch (NullValueException e) {
+      // expected
     }
   }
 
@@ -824,7 +823,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
         .singleResult();
 
     // then
-    assertEquals("oneTaskCase", caseInstance.getCaseDefinitionKey());
+    assertThat(caseInstance.getCaseDefinitionKey()).isEqualTo("oneTaskCase");
 
   }
 
@@ -841,7 +840,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
         .singleResult();
 
     // then
-    assertEquals("One Task Case", caseInstance.getCaseDefinitionName());
+    assertThat(caseInstance.getCaseDefinitionName()).isEqualTo("One Task Case");
 
   }
 
@@ -849,7 +848,7 @@ public class HistoricCaseInstanceTest extends CmmnTest {
     HistoricCaseInstance historicCaseInstance = historicQuery()
       .caseInstanceId(caseInstanceId)
       .singleResult();
-    assertNotNull(historicCaseInstance);
+    assertThat(historicCaseInstance).isNotNull();
     return historicCaseInstance;
   }
 
@@ -858,12 +857,12 @@ public class HistoricCaseInstanceTest extends CmmnTest {
   }
 
   protected void assertCount(long count, HistoricCaseInstanceQuery historicQuery) {
-    assertEquals(count, historicQuery.count());
+    assertThat(historicQuery.count()).isEqualTo(count);
   }
 
   protected void assertDateSimilar(Date date1, Date date2) {
     long difference = Math.abs(date1.getTime() - date2.getTime());
-    assertTrue(difference < 1000);
+    assertThat(difference).isLessThan(1000);
   }
 
 }
